objects/ALL_Profile_Access_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Dealer_Group_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Group Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_2_Case_Email_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email 2 Case Email Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_2_Case_Email_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email 2 Case Email Message</label>
        <type>Checkbox</type>
    </fields>
    <label>ALL Profile Access Settings</label>
</CustomObject>